--- a/deno.json
+++ b/deno.json
@@ -7,4 +7,8 @@
     "semiColons": true
   },
   "lock": false,
+  "imports": {
+    "std/": "https://deno.land/std@0.216.0/",
+    "base64": "https://deno.land/x/base64@v0.2.1/mod.ts"
+  }
 }
